registration, login api

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ThisIsA32ByteMinimumSecretKey1234567890!!",
+    "Issuer": "AuthenticationApp",
+    "Audience": "MyAppUsers",
+    "ExpiresInMinutes": 60
+  },
+  "Email": {
+    "Smtp": {
+      "Host": "smtp.gmail.com",
+      "Port": "587",
+      "Username": "jenish.shakya333@gmail.com",
+      "Password": "pzrq dawg xiwo uiec",
+      "From": "reply@mgmail.com"
+    }
+  },
+  "Frontend": {
+    "BaseUrl": "https://frontend.com"
+  }
 }
