--- a/authentication-api.csproj
+++ b/authentication-api.csproj
@@ -8,24 +8,34 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Controllers\**" />
     <Compile Remove="Features\**" />
     <Compile Remove="Interfaces\**" />
-    <Content Remove="Controllers\**" />
     <Content Remove="Features\**" />
     <Content Remove="Interfaces\**" />
-    <EmbeddedResource Remove="Controllers\**" />
     <EmbeddedResource Remove="Features\**" />
     <EmbeddedResource Remove="Interfaces\**" />
-    <None Remove="Controllers\**" />
     <None Remove="Features\**" />
     <None Remove="Interfaces\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Features\Users\Commands\LoginCommand.cs" />
+    <Compile Include="Features\Users\Commands\RegisterUserCommand.cs" />
+    <Compile Include="Features\Users\Commands\SetPasswordCommand.cs" />
+    <Compile Include="Features\Users\DTOs\LoginDto.cs" />
+    <Compile Include="Features\Users\DTOs\RegisterUserDto.cs" />
+    <Compile Include="Features\Users\DTOs\SetPasswordDto.cs" />
+    <Compile Include="Features\Users\Handlers\LoginCommandHandler.cs" />
+    <Compile Include="Features\Users\Handlers\RegisterUserCommandHandler.cs" />
+    <Compile Include="Features\Users\Handlers\SetPasswordCommandHandler.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentMigrator" Version="7.1.0" />
     <PackageReference Include="FluentMigrator.Runner" Version="7.1.0" />
     <PackageReference Include="FluentMigrator.Runner.SqlServer" Version="7.1.0" />
+    <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
