smtp credentials updated

--- a/appsettings.json
+++ b/appsettings.json
@@ -17,11 +17,11 @@
   },
   "Email": {
     "Smtp": {
-      "Host": "smtp.gmail.com",
-      "Port": "587",
-      "Username": "jenish.shakya333@gmail.com",
-      "Password": "pzrq dawg xiwo uiec",
-      "From": "reply@mgmail.com"
+      "Host": "",
+      "Port": "",
+      "Username": "",
+      "Password": "",
+      "From": ""
     }
   },
   "Frontend": {
